<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/cardView"
    app:cardElevation="2dp"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:cardCornerRadius="10dp"
    app:cardMaxElevation="7dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_main"
            android:contentDescription="@string/img_main_desc"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/rv_item_title"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:maxLines="2"
                    android:alpha="0.5"
                    android:text="@string/rv_item_desc"
                    android:textSize="14sp" />

            </LinearLayout>

            <ImageView
                android:layout_weight="1"
                android:id="@+id/bookmark_btn"
                android:contentDescription="@string/rv_wishlist_desc"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:layout_gravity="center|center_horizontal"
                android:src="@drawable/ic_bookmark_deactivated" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>